feat: add memory configs