@@ -4,3 +4,11 @@
 # This configuration file is for development only and should NOT be used
 # in production. For example configuration, see the Presto documentation.
 #
+-server
+-Xmx512M
+-XX:+UseG1GC
+-XX:G1HeapRegionSize=32M
+-XX:+UseGCOverheadLimit
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+ExitOnOutOfMemoryError
+-Djdk.attach.allowAttachSelf=true
